resized the map

--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -57,6 +57,12 @@
       padding: 20px;
       border: 1px solid #888;
       width: 50%;
+      @media(max-width:$sm){
+        width: 75%;
+      }
+      @media(max-width:$xs){
+        width: 90%;
+      }
       &--close {
         color: #aaaaaa;
         float: right;
