--- a/css/style.css
+++ b/css/style.css
@@ -1222,6 +1222,12 @@
       padding: 20px;
       border: 1px solid #888;
       width: 50%; }
+      @media (max-width: 992px) {
+        .map__box--content {
+          width: 75%; } }
+      @media (max-width: 768px) {
+        .map__box--content {
+          width: 90%; } }
       .map__box--content--close {
         color: #aaaaaa;
         float: right;
