--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -2,9 +2,9 @@
   background-color: $color-blue;
   .row{
     width:100%;
-    margin-left:18%;
+    padding-left:27%;
     @media(max-width:$xs){
-      margin-left: 0;
+      padding-left: 0;
     }
     .numbers__div{
       height:190px;
@@ -66,3 +66,4 @@
     }
   }
 }
+
