--- a/sass/_logos.scss
+++ b/sass/_logos.scss
@@ -3,9 +3,11 @@
   background-color: $color-grey;
   padding-top: 3%;
   padding-bottom: 3%;
+  
   div{
     .logos__row{
-      div{
+
+      /*div{
         img{
           margin-left: 15%;
           @media #{$sm-screen}
@@ -40,7 +42,7 @@
         @media only screen and (max-width: 480px){
           margin-top: -80px;
         }
-      }
+      }*/
     }
   }
 }
