--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -4,7 +4,6 @@
   background-color: $color-grey;
   height: 100%;
   &--back {
-    //content:url("../img/map_back.png");
     position: absolute;
     left: 0;
     top: 0;
@@ -12,33 +11,33 @@
     height: 100%;
     opacity: 0.1;
   }
-  &__inside{
+  &__inside {
     text-align: center;
     opacity: 1;
-    &--pictogram{
+    &--pictogram {
       padding-top: 2%;
       padding-bottom: 0.5%;
     }
-    &--text{
+    &--text {
       font-family: 'Montserrat', sans-serif;
       font-size: 2em;
       font-weight: bold;
       color: $color-red;
       z-index: 500;
     }
-    &--text{
+    &--text {
       color: $color-red;
       animation-name: example;
       animation-duration: 4s;
     }
-    &--rectangle{
+    &--rectangle {
       width: 5%;
       padding-bottom: 3%;
     }
   }
-  a:hover{
+  a:hover {
     text-decoration: none;
-    cursor:pointer;
+    cursor: pointer;
   }
   &__box {
     display: none;
@@ -49,19 +48,20 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     &--content {
       background-color: #fefefe;
       margin: auto;
       padding: 20px;
       border: 1px solid #888;
       width: 50%;
-      @media(max-width:$sm){
+      @media(max-width: $sm) {
         width: 75%;
       }
-      @media(max-width:$xs){
+      @media(max-width: $xs) {
         width: 90%;
+        padding: 10px;
       }
       &--close {
         color: #aaaaaa;
@@ -69,7 +69,7 @@
         font-size: 28px;
         font-weight: bold;
         &:hover,
-        &focus{
+        &focus {
           color: #000;
           text-decoration: none;
           cursor: pointer;
@@ -77,8 +77,8 @@
       }
     }
   }
-}
-#map{
-  height: 400px;
-  width: 100%;
+  #map {
+    height: 400px;
+    width: 100%;
+  }
 }
