--- a/sass/_foot.scss
+++ b/sass/_foot.scss
@@ -120,6 +120,9 @@
       font-size: 1.3em;
       padding-top: 15%;
       font-weight: bold;
+      @media#{$xs-screen}{
+        margin-left: -3%;
+      }
     }
     &--row {
       margin-top: 5%;
@@ -166,12 +169,6 @@
     }
   }
   &__3 {
-    &--title {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 1.3em;
-      padding-top: 15%;
-      font-weight: bold;
-    }
     &--insta {
       text-align: center;
       @media #{$md-screen}
