--- a/css/style.css
+++ b/css/style.css
@@ -1045,6 +1045,18 @@
     .blog__news--title {
       margin-left: 20%;
       text-align: left; } }
+  @media only screen and (max-width: 700px) {
+    .blog__news--title {
+      margin-left: 15%; } }
+  @media only screen and (max-width: 610px) {
+    .blog__news--title {
+      margin-left: 10%; } }
+  @media only screen and (max-width: 550px) {
+    .blog__news--title {
+      margin-left: 5%; } }
+  @media only screen and (max-width: 490px) {
+    .blog__news--title {
+      margin-left: 3%; } }
 .blog__news--text {
   padding-top: 2%;
   color: #999999;
@@ -1053,10 +1065,23 @@
     .blog__news--text {
       margin-left: 20%;
       text-align: left;
-      width: 50%; } }
-  @media only screen and (max-width: 600px) {
+      width: 65%; } }
+  @media only screen and (max-width: 700px) {
     .blog__news--text {
-      width: 60%; } }
+      width: 71%;
+      margin-left: 15%; } }
+  @media only screen and (max-width: 610px) {
+    .blog__news--text {
+      width: 82%;
+      margin-left: 10%; } }
+  @media only screen and (max-width: 550px) {
+    .blog__news--text {
+      width: 92%;
+      margin-left: 5%; } }
+  @media only screen and (max-width: 490px) {
+    .blog__news--text {
+      width: 94%;
+      margin-left: 3%; } }
 .blog__news--line {
   display: inline-block;
   border: 1px solid #e5e5e5;
@@ -1065,10 +1090,22 @@
   margin-bottom: 1.5%; }
   @media only screen and (max-width: 768px) {
     .blog__news--line {
-      width: 60%; } }
+      width: 65%; } }
   @media only screen and (max-width: 600px) {
     .blog__news--line {
       width: 70%; } }
+  @media only screen and (max-width: 700px) {
+    .blog__news--line {
+      width: 73%; } }
+  @media only screen and (max-width: 610px) {
+    .blog__news--line {
+      width: 85%; } }
+  @media only screen and (max-width: 550px) {
+    .blog__news--line {
+      width: 95%; } }
+  @media only screen and (max-width: 490px) {
+    .blog__news--line {
+      width: 100%; } }
 .blog__news--pictograms {
   padding-top: 2%;
   padding-bottom: 10%;
@@ -1079,7 +1116,20 @@
     margin-right: 2%; }
   @media only screen and (max-width: 768px) {
     .blog__news--pictograms {
-      width: 60%; } }
+      margin-left: 20%;
+      text-align: left; } }
+  @media only screen and (max-width: 700px) {
+    .blog__news--pictograms {
+      margin-left: 15%; } }
+  @media only screen and (max-width: 610px) {
+    .blog__news--pictograms {
+      margin-left: 10%; } }
+  @media only screen and (max-width: 550px) {
+    .blog__news--pictograms {
+      margin-left: 5%; } }
+  @media only screen and (max-width: 490px) {
+    .blog__news--pictograms {
+      margin-left: 3%; } }
 .blog__news figure img {
   padding-left: 5%;
   padding-right: 5%; }
