--- a/css/style.css
+++ b/css/style.css
@@ -1026,12 +1026,17 @@
             padding-top: 25%; } }
         @media screen and (max-width: 600px) {
           .say__client--img img {
-            padding-top: 40%;
+            padding-top: 20%;
             padding-left: 5%;
             width: 100%; } }
+        @media screen and (max-width: 500px) {
+          .say__client--img img {
+            padding-top: 30%;
+            padding-left: 5%;
+            width: 110%; } }
         @media screen and (max-width: 450px) {
           .say__client--img img {
-            width: 140%;
+            width: 130%;
             padding-left: 0%; } }
 
 @media only screen and (max-width: 768px) {
