--- a/sass/_say.scss
+++ b/sass/_say.scss
@@ -73,13 +73,19 @@
         }
         @media screen and (max-width:600px)
         {
-          padding-top: 40%;
+          padding-top: 20%;
           padding-left: 5%;
           width: 100%;
         }
+        @media screen and (max-width:500px)
+        {
+          padding-top: 30%;
+          padding-left: 5%;
+          width: 110%;
+        }
         @media screen and (max-width:450px)
         {
-          width: 140%;
+          width: 130%;
           padding-left: 0%;
         }
       }
