--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -1,11 +1,8 @@
 #numbers{
   background-color: $color-blue;
   .row{
-    width:100%;
-    margin-left:18%;
-    @media(max-width:$xs){
-      margin-left: 0;
-    }
+    width:90%;
+    margin: 0 auto;
     .numbers__div{
       height:190px;
       border-right: 1px solid white;
