--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,4 +1,5 @@
 #banner{
+
   position:relative;
   overflow: hidden;
   background: -webkit-linear-gradient($gradient-top, $gradient-bottom);
@@ -55,8 +56,16 @@
     }
   }
   .banner__slider{
+    width:90%;
+    margin: 0;
     text-align:left;
     text-transform: uppercase;
+    @media(max-width:1600px){
+      margin-left:7%;
+    }
+    @media(max-width:$xs){
+      padding-left:0%;
+    }
     &__slide{
       opacity:0.6;
       color:white;
