--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,9 +1,7 @@
 $header-bg: #3f51b5;
 $menu-width: 250px!default;
 
-//*{
-//  border: 1px solid black;
-//}
+
 /* BASE */
 html,
 body {
@@ -18,10 +16,10 @@ body {
 }
 
 
-.container {
-  //@include clearfix();
-  margin: 0 20px;
-}
+//.container {
+//  //@include clearfix();
+//  margin: 0 20px;
+//}
 
 .site-content {
   padding-top: 0px;
@@ -89,9 +87,6 @@ body {
     height: 100%;
   }
 
-  .site-container {
-    //overflow: hidden;
-  }
 
   .site-pusher {
     -webkit-transition-duration: 0.3s;
