menu is now tracking user's movements

--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,8 @@ body {
     font-weight: 700; }
     .menu .page-scroll:hover {
       color: #fce38a; }
+    .menu .page-scroll.active {
+      color: #fce38a; }
 
 /* RESPONSIVE */
 @media only screen and (max-width: 768px) {
