--- a/css/style.css
+++ b/css/style.css
@@ -444,12 +444,15 @@
 .navbar-arrow {
   border: solid white;
   border-width: 0 10px 10px 0;
-  background-color: transparent;
-  text-align: right;
-  padding: 10px;
-  margin-right: 10px;
+  background-color: #f38181;
+  float: right;
   transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg); }
+  -webkit-transform: rotate(-45deg);
+  transition: all 0.4s cubic-bezier(0.53, 1, 0.52, 1);
+  padding: 9px 10px;
+  margin-top: 20px;
+  margin-right: 15px;
+  margin-bottom: 8px; }
 
 .top-nav-collapse {
   background-color: #95e1d3;
@@ -490,7 +493,7 @@
   background-color: transparent;
   border-color: transparent !important; }
 
-.navbar-default .navbar-toggle:focus {
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-arrow:focus {
   background-color: transparent; }
 
 .navbar-default .navbar-toggle:hover {
@@ -535,6 +538,19 @@
   .menu li:hover:after,
   .menu li.hover:after {
     right: 55%; } }
+.navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a {
+  background-color: transparent;
+  border-bottom-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  padding-bottom: 0px; }
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > li > a:focus, .navbar-nav > li > a:hover {
+  background-color: transparent !important; }
+
+.navbar-toggle {
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
+
 #about .about__gallery {
   width: 90%;
   margin: auto;
