--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -28,12 +28,15 @@
   .navbar-arrow{
     border: solid white;
     border-width: 0 10px 10px 0;
-    background-color: transparent;
-    text-align: right;
-    padding: 10px;
-    margin-right: 10px;
+    background-color: $color-red;
+    float: right;
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
+    transition: all .4s cubic-bezier(0.53, 1, 0.52, 1);
+    padding: 9px 10px;
+    margin-top: 20px;
+    margin-right: 15px;
+    margin-bottom: 8px;
   }
 
   .top-nav-collapse{
@@ -82,7 +85,7 @@
   .navbar-toggle{
     background-color: transparent;
     border-color: transparent !important;
-  }.navbar-default .navbar-toggle:focus{
+  }.navbar-default .navbar-toggle:focus,.navbar-default .navbar-arrow:focus{
      background-color: transparent;
    }
   .navbar-default .navbar-toggle:hover{
@@ -132,8 +135,21 @@
   .menu li:hover:after,
   .menu li.hover:after {
     right: 55%;
-
   }
+}
+.navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a{
+  background-color: transparent;
+  border-bottom-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  padding-bottom: 0px;
+}
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:focus, .navbar-nav>li>a:hover{
+  background-color: transparent!important;
+}
+.navbar-toggle{
+
+  transition: all .6s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 
